--- a/sections/header.liquid
+++ b/sections/header.liquid
@@ -531,7 +531,7 @@
                 alt: logo_alt
               }}
             {%- else -%}
-              <span class="h2">{{ shop.name }}</span>
+              <span class="h2">{{ "Munna Bhai MBBS" }}</span>
             {%- endif -%}
           </a>
       {%- if request.page_type == 'index' -%}
